Bug 1673364 - nsHostResolver::InitLoopbackRecord should not call GetAddrInfo r=necko-reviewers,dragana

Differential Revision: https://phabricator.services.mozilla.com/D94726